Refactored mast classes to intro. Set up hbs webpack processing. Wired JSON intro text to JSON data object via hbs. Added handlebars exclude node modules.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,3 @@
-
 // Required Core Stylesheet
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
@@ -14,7 +13,7 @@
 @import 'partials/panel';
 @import 'partials/nav';
 
-@import 'partials/panel--mast';
+@import 'partials/panel--intro';
 @import 'partials/panel--bio';
 @import 'partials/panel--projects';
 
