refactored intro panel, wired json obj to handlebars

--- a/src/templates/home/sections/intro/hover-photo-collection.hbs
+++ b/src/templates/home/sections/intro/hover-photo-collection.hbs
@@ -1,8 +1,7 @@
 {{#each hoverPhotos as | hoverPhoto i|}}
-    {{#if intro--text-fragment-type}}
-        <img class="intro__image project--{{intro--text-fragment}}" 
-        src="./images/content/{{intro--text-hoverable-image}}">
-    {{/if}}
+	{{#if intro--fragment-type}}
+		<img class="intro__image 
+					js--project--{{intro--fragment-key}}" 
+			src=".{{intro--fragment-image-path}}">
+	{{/if}}
 {{/each}}
-
-
