--- a/src/scss/partials/_panel--intro.scss
+++ b/src/scss/partials/_panel--intro.scss
@@ -78,12 +78,18 @@
 
 }
 
+.intro__image-wrapper {
+
+}
+
 .intro__image {
 	position: absolute;
 	object-fit: cover;
 	width: 100vw;
 	height: 100vh;
 	opacity: 0;
+	pointer-events: none;
+	z-index: 1;
 }
 
 .intro__wrapper {
