wired templates data to netlify json

--- a/src/templates/home/sections/intro/hover-photo-collection.hbs
+++ b/src/templates/home/sections/intro/hover-photo-collection.hbs
@@ -1,7 +1,7 @@
 {{#each hoverPhotos as | hoverPhoto i|}}
-	{{#if intro--fragment-type}}
+	{{#if introFragmentType}}
 		<img class="intro__image 
-					js--project--{{intro--fragment-key}}" 
-			src=".{{intro--fragment-image-path}}">
+					js--project--{{introFragmentKey}}" 
+			src=".{{introFragmentImagePath}}">
 	{{/if}}
 {{/each}}
