Renamed build task as per docs. Added handlebars helpers. moved todo list into readme.

--- a/src/templates/home/sections/intro/hover-photo-collection.hbs
+++ b/src/templates/home/sections/intro/hover-photo-collection.hbs
@@ -1,7 +1,7 @@
 {{#each hoverPhotos as | hoverPhoto i|}}
-	{{#if introFragmentType}}
+	{{#ifEquals introFragmentType "hoverable"}}
 		<img class="intro__image 
-					js--project--{{introFragmentKey}}" 
-			src=".{{introFragmentImagePath}}">
-	{{/if}}
+					js--project--{{ introFragmentKey }}" 
+			src=".{{ introFragmentImagePath }}">
+	{{/ifEquals}}
 {{/each}}
