--- a/src/templates/home/sections/intro/hover-photo-collection.hbs
+++ b/src/templates/home/sections/intro/hover-photo-collection.hbs
@@ -1,7 +1,5 @@
 {{#each hoverPhotos as | hoverPhoto i|}}
 	{{#ifEquals introFragmentType "hoverable"}}
-		<img class="intro__image 
-					js--project--{{ introFragmentKey }}" 
-			src=".{{ introFragmentImagePath }}">
+		<img class="intro__image js--project--{{ introFragmentKey }}" src=".{{ introFragmentImagePath }}">
 	{{/ifEquals}}
 {{/each}}
