making sure design doesnt block the hover

--- a/src/scss/partials/_panel--intro.scss
+++ b/src/scss/partials/_panel--intro.scss
@@ -278,6 +278,7 @@
 	height: 13rem;
 	left: 160px;
 	bottom: -5rem;
+	pointer-events: none;
 	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAOklEQVQoU43MSwoAMAgD0eT+h7ZYaOlHo7N+DNHL2HAGgBWcyGcKbqTghTL4oQiG6IUpOqFEC5bI4QD8PAoKd9j4XwAAAABJRU5ErkJggg==);
 	mix-blend-mode: soft-light;
 }
