--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -29,7 +29,7 @@
 .menu li a {
   display: block;
   color: $teal-6;
-  font-family: 'RKG', sans-serif;
+  font-family: 'K-Regular', sans-serif;
   font-size: 1.3rem;
   padding: 0.75rem 0;
   margin: 0.5rem 0.5rem 0.5rem 0;
@@ -99,7 +99,7 @@
 #fp-nav ul li .fp-tooltip.left {
   left: 2.5rem !important;
   font-size: 1rem !important;
-  font-family: 'RKG', sans-serif;
+  font-family: 'K-Regular', sans-serif;
   top: 0 !important
 }
 
