split projects into art and commerical

--- a/src/scss/partials/_panel--projects.scss
+++ b/src/scss/partials/_panel--projects.scss
@@ -1,7 +1,11 @@
 @import "_colors";
 
-.panel--projects {
-	background: linear-gradient(180deg,#05070b 0,#17171d);
+.panel--art-projects {
+	background: $gray--light;
+}
+
+.panel--commerical-projects {
+	background: linear-gradient(180deg, #05070b 0, #17171d);
 }
 
 .glide__track {
@@ -35,7 +39,7 @@
 	background-size: cover;
 	background-position: center center;
 	
-	@include mq('lg') { 
+	@include mq('lg') {
 		opacity: 0.6;
 		transition: opacity 0.1s ease-in-out;
 	}
@@ -80,29 +84,29 @@
 }
 
 
-// .glide__slide:nth-of-type(1){ background-image: url('.././images/photos/content/_MG_5563.jpg');	}
-// .glide__slide:nth-of-type(2){ background-image: url('.././images/photos/content/IMG_1243--1800.jpg');	}
-// .glide__slide:nth-of-type(3){ background-image: url('.././images/photos/content/_MG_5625.jpg');	}
-// .glide__slide:nth-of-type(4){ background-image: url('.././images/photos/content/_MP_6321--1600.jpg');	}
-// .glide__slide:nth-of-type(5){ background-image: url('.././images/photos/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
-// .glide__slide:nth-of-type(6){ background-image: url('.././images/photos/content/eyeball---kbrehm--costume.jpg');	}
-// .glide__slide:nth-of-type(7){ background-image: url('.././images/photos/content/poof.png');	}
+.glide__slide:nth-of-type(1){ background-image: url('.././images/content/_MG_5563.jpg');	}
+.glide__slide:nth-of-type(2){ background-image: url('.././images/content/IMG_1243--1800.jpg');	}
+.glide__slide:nth-of-type(3){ background-image: url('.././images/content/_MG_5625.jpg');	}
+.glide__slide:nth-of-type(4){ background-image: url('.././images/content/_MP_6321--1600.jpg');	}
+.glide__slide:nth-of-type(5){ background-image: url('.././images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
+.glide__slide:nth-of-type(6){ background-image: url('.././images/content/eyeball---kbrehm--costume.jpg');	}
+.glide__slide:nth-of-type(7){ background-image: url('.././images/content/poof.png');	}
 
-// .glide__slide:nth-of-type(8){ background-image: url('.././images/photos/content/_MG_5563.jpg');	}
-// .glide__slide:nth-of-type(9){ background-image: url('.././images/photos/content/IMG_1243--1800.jpg');	}
-// .glide__slide:nth-of-type(10){ background-image: url('.././images/photos/content/_MG_5625.jpg');	}
-// .glide__slide:nth-of-type(11){ background-image: url('.././images/photos/content/_MP_6321--1600.jpg');	}
-// .glide__slide:nth-of-type(12){ background-image: url('.././images/photos/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
-// .glide__slide:nth-of-type(13){ background-image: url('.././images/photos/content/eyeball---kbrehm--costume.jpg');	}
-// .glide__slide:nth-of-type(14){ background-image: url('.././images/photos/content/poof.png');	}
+.glide__slide:nth-of-type(8){ background-image: url('.././images/content/_MG_5563.jpg');	}
+.glide__slide:nth-of-type(9){ background-image: url('.././images/content/IMG_1243--1800.jpg');	}
+.glide__slide:nth-of-type(10){ background-image: url('.././images/content/_MG_5625.jpg');	}
+.glide__slide:nth-of-type(11){ background-image: url('.././images/content/_MP_6321--1600.jpg');	}
+.glide__slide:nth-of-type(12){ background-image: url('.././images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
+.glide__slide:nth-of-type(13){ background-image: url('.././images/content/eyeball---kbrehm--costume.jpg');	}
+.glide__slide:nth-of-type(14){ background-image: url('.././images/content/poof.png');	}
 
-// .glide__slide:nth-of-type(15){ background-image: url('.././images/photos/content/_MG_5563.jpg');	}
-// .glide__slide:nth-of-type(16){ background-image: url('.././images/photos/content/IMG_1243--1800.jpg');	}
-// .glide__slide:nth-of-type(17){ background-image: url('.././images/photos/content/_MG_5625.jpg');	}
-// .glide__slide:nth-of-type(18){ background-image: url('.././images/photos/content/_MP_6321--1600.jpg');	}
-// .glide__slide:nth-of-type(19){ background-image: url('.././images/photos/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
-// .glide__slide:nth-of-type(20){ background-image: url('.././images/photos/content/eyeball---kbrehm--costume.jpg');	}
-// .glide__slide:nth-of-type(21){ background-image: url('.././images/photos/content/poof.png');	}
+.glide__slide:nth-of-type(15){ background-image: url('.././images/content/_MG_5563.jpg');	}
+.glide__slide:nth-of-type(16){ background-image: url('.././images/content/IMG_1243--1800.jpg');	}
+.glide__slide:nth-of-type(17){ background-image: url('.././images/content/_MG_5625.jpg');	}
+.glide__slide:nth-of-type(18){ background-image: url('.././images/content/_MP_6321--1600.jpg');	}
+.glide__slide:nth-of-type(19){ background-image: url('.././images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
+.glide__slide:nth-of-type(20){ background-image: url('.././images/content/eyeball---kbrehm--costume.jpg');	}
+.glide__slide:nth-of-type(21){ background-image: url('.././images/content/poof.png');	}
 
 
 .slide__image {
@@ -116,8 +120,7 @@
 	margin: 1rem;
 	top: -3.4rem;
 	user-select: text;
-	color: white;
-	/* background: #f3ff76; */
+	color: $gray--dark;
 	/* box-shadow: 1rem 1rem rgba($teal-2, 0.4); */
 }
 
