Processing CSS images through image-loader, and also copying full image folder because cant figure out how to process handle-bars dynamic images yet. First slider working, enabled dragging. Refactored class name: panels to section. Removed id’s from fullpage until Nav set up.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,12 +10,12 @@
 @import 'partials/base';
 @import 'partials/utilities';
 @import 'partials/type';
-@import 'partials/panel';
+@import 'partials/section';
 @import 'partials/nav';
 
-@import 'partials/panel--intro';
-@import 'partials/panel--bio';
-@import 'partials/panel--projects';
+@import 'partials/section--intro';
+@import 'partials/section--bio';
+@import 'partials/section--projects';
 
 
 body {
