--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -2,23 +2,27 @@ $black: black;
 $gray--light: #F5F5F5;
 $gray--mid: #B8BDC2;
 $gray--dark: #2C3531;
-$teal: #00aa9d;
-$yellow: #f5ff89;
+$teal: #00AA9D;
+$yellow: #F5FF89;
 
-$teal-1: #e7f0f0; 
-$teal-2: #cfe2e1; 
-$teal-3: #b7d3d3; 
-$teal-4: #9fc6c5; 
-$teal-5: #87b8b7; 
-$teal-6: #6fa9a9; 
-$teal-7: #559c9b; 
-$teal-8: #368e8d; 
+$teal-1: #E7F0F0; 
+$teal-2: #CFE2E1; 
+$teal-3: #B7D3D3; 
+$teal-4: #9FC6C5; 
+$teal-5: #87B8B7; 
+$teal-6: #6FA9A9; 
+$teal-7: #559C9B; 
+$teal-8: #368E8D; 
 $teal-9: #008080; 
 
-$teal-10: #002f2f; 
+$teal-10: #002F2F; 
 
 $jacarta: #282562;
-$babyblue: #74bae3;
+$babyblue: #74BAE3;
 
-
+// #00FDDC
+// #276688
+// #A9ABB7
+// #55DDE0
+// #6EABC2
 
