--- a/src/scss/partials/_section--projects.scss
+++ b/src/scss/partials/_section--projects.scss
@@ -75,30 +75,29 @@
 	margin-right: 3rem;
 }
 
+.glide__slide:nth-of-type(1) { background-image: url('../images/content/_MG_5563.jpg');	}
+.glide__slide:nth-of-type(2) { background-image: url('../images/content/IMG_1243--1800.jpg');	}
+.glide__slide:nth-of-type(3) { background-image: url('../images/content/_MG_5625.jpg');	}
+.glide__slide:nth-of-type(4) { background-image: url('../images/content/_MP_6321--1600.jpg');	}
+.glide__slide:nth-of-type(5) { background-image: url('../images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
+.glide__slide:nth-of-type(6) { background-image: url('../images/content/eyeball---kbrehm--costume.jpg');	}
+.glide__slide:nth-of-type(7) { background-image: url('../images/content/poof.png');	}
 
-.glide__slide:nth-of-type(1) { background-image: url('.././images/content/_MG_5563.jpg');	}
-.glide__slide:nth-of-type(2) { background-image: url('.././images/content/IMG_1243--1800.jpg');	}
-.glide__slide:nth-of-type(3) { background-image: url('.././images/content/_MG_5625.jpg');	}
-.glide__slide:nth-of-type(4) { background-image: url('.././images/content/_MP_6321--1600.jpg');	}
-.glide__slide:nth-of-type(5) { background-image: url('.././images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
-.glide__slide:nth-of-type(6) { background-image: url('.././images/content/eyeball---kbrehm--costume.jpg');	}
-.glide__slide:nth-of-type(7) { background-image: url('.././images/content/poof.png');	}
+.glide__slide:nth-of-type(8) { background-image: url('../images/content/_MG_5563.jpg');	}
+.glide__slide:nth-of-type(9) { background-image: url('../images/content/IMG_1243--1800.jpg');	}
+.glide__slide:nth-of-type(10) { background-image: url('../images/content/_MG_5625.jpg');	}
+.glide__slide:nth-of-type(11) { background-image: url('../images/content/_MP_6321--1600.jpg');	}
+.glide__slide:nth-of-type(12) { background-image: url('../images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
+.glide__slide:nth-of-type(13) { background-image: url('../images/content/eyeball---kbrehm--costume.jpg');	}
+.glide__slide:nth-of-type(14) { background-image: url('../images/content/poof.png');	}
 
-.glide__slide:nth-of-type(8) { background-image: url('.././images/content/_MG_5563.jpg');	}
-.glide__slide:nth-of-type(9) { background-image: url('.././images/content/IMG_1243--1800.jpg');	}
-.glide__slide:nth-of-type(10) { background-image: url('.././images/content/_MG_5625.jpg');	}
-.glide__slide:nth-of-type(11) { background-image: url('.././images/content/_MP_6321--1600.jpg');	}
-.glide__slide:nth-of-type(12) { background-image: url('.././images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
-.glide__slide:nth-of-type(13) { background-image: url('.././images/content/eyeball---kbrehm--costume.jpg');	}
-.glide__slide:nth-of-type(14) { background-image: url('.././images/content/poof.png');	}
-
-.glide__slide:nth-of-type(15) { background-image: url('.././images/content/_MG_5563.jpg');	}
-.glide__slide:nth-of-type(16) { background-image: url('.././images/content/IMG_1243--1800.jpg');	}
-.glide__slide:nth-of-type(17) { background-image: url('.././images/content/_MG_5625.jpg');	}
-.glide__slide:nth-of-type(18) { background-image: url('.././images/content/_MP_6321--1600.jpg');	}
-.glide__slide:nth-of-type(19) { background-image: url('.././images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
-.glide__slide:nth-of-type(20) { background-image: url('.././images/content/eyeball---kbrehm--costume.jpg');	}
-.glide__slide:nth-of-type(21) { background-image: url('.././images/content/poof.png');	}
+.glide__slide:nth-of-type(15) { background-image: url('../images/content/_MG_5563.jpg');	}
+.glide__slide:nth-of-type(16) { background-image: url('../images/content/IMG_1243--1800.jpg');	}
+.glide__slide:nth-of-type(17) { background-image: url('../images/content/_MG_5625.jpg');	}
+.glide__slide:nth-of-type(18) { background-image: url('../images/content/_MP_6321--1600.jpg');	}
+.glide__slide:nth-of-type(19) { background-image: url('../images/content/chi-cth-blue-man-group-2017-ct0047554800-20170210.jpg');	}
+.glide__slide:nth-of-type(20) { background-image: url('../images/content/eyeball---kbrehm--costume.jpg');	}
+.glide__slide:nth-of-type(21) { background-image: url('../images/content/poof.png');	}
 
 .slide__image {
 	object-fit: cover;
