Added URL history. Refactored bio TL. Made bio images dynamic. Fixed art projects carousel. Renamed intro fields to proper BEM. Removed unused images. Added bio PDF. Sections name based so easy to rearrange order. Refactored colors.

--- a/src/scss/partials/_colors.scss
+++ b/src/scss/partials/_colors.scss
@@ -1,28 +1,13 @@
 $black: black;
 $gray--light: #F5F5F5;
 $gray--mid: #B8BDC2;
-$gray--dark: #2C3531;
-$teal: #00AA9D;
-$yellow: #F5FF89;
 
-$teal-1: #E7F0F0; 
-$teal-2: #CFE2E1; 
-$teal-3: #B7D3D3; 
-$teal-4: #9FC6C5; 
-$teal-5: #87B8B7; 
-$teal-6: #6FA9A9; 
-$teal-7: #559C9B; 
-$teal-8: #368E8D; 
-$teal-9: #008080; 
+$palette--calypso: #276688;
+$palette--mint: #00FDDC;
+$palette--pearl: #A9ABB7;
+$palette--turquoise-blue: #55DDE0;
+$palette--glacier: #6EABC2;
 
-$teal-10: #002F2F; 
+$palette--green: #82C345;
 
-$jacarta: #282562;
-$babyblue: #74BAE3;
-
-// #00FDDC
-// #276688
-// #A9ABB7
-// #55DDE0
-// #6EABC2
-
+$palette--navy: #26274C;
