--- a/src/scss/partials/_utilities.scss
+++ b/src/scss/partials/_utilities.scss
@@ -14,7 +14,7 @@
   /* mix-blend-mode: soft-light; */
   /* background-color: $teal-3; */
   mix-blend-mode: color;
-  background-color: $teal-5;
+  // background-color: $teal-5;
 }
 
 @mixin border($color, $border-size) {
