--- a/src/templates/partials/arrow.hbs
+++ b/src/templates/partials/arrow.hbs
@@ -1,3 +1,3 @@
-<button class="glide__arrow glide__arrow--left" data-glide-dir="<">
-    <i class="material-icons material-icon__arrow--down">arrow_downward</i>
+<button class="button--arrow-down" >
+    <i class="material-icons material-icon__arrow--down">trending_flat</i>
 </button>
