--- a/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
+++ b/src/templates/home/sections/art-projects/art-projects-images-collection.hbs
@@ -5,6 +5,7 @@
             <img class="slide__image" src=".{{ artProjectImagePath }}">
             <h2 class="slide__description h1--sans slide__title">{{ artProjectTitle }}</h2>
             {{!-- <p class="">{{ artProjectDescription }}</p> --}}
+            <div class="slide__tag tag--{{ artProjectType }}"></div>
         </li>
     {{/each}}
 </ul>
